--- a/topology.bib
+++ b/topology.bib
@@ -1,12 +1,50 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2024-11-22 08:51:09 -0600 
+%% Created for Jeff Erickson at 2024-11-27 08:40:43 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{h-chps2-73,
+	author = {Ho, Chung-Wu},
+	date-added = {2024-11-27 08:22:22 -0600},
+	date-modified = {2024-11-27 08:40:20 -0600},
+	doi = {10.2307/1996631},
+	journal = {Trans. Amer. Math. Soc.},
+	keywords = {morphing},
+	pages = {235--243},
+	title = {On Certain Homotopy Properties of some Spaces of Linear and Piecewise Linear Homeomorphisms. {II}},
+	volume = {181},
+	year = {1973}}
+
+@article{h-chps1-73,
+	author = {Ho, Chung-Wu},
+	date-added = {2024-11-27 08:20:49 -0600},
+	date-modified = {2024-11-27 08:40:27 -0600},
+	doi = {10.2307/1996630},
+	journal = {Trans. Amer. Math. Soc.},
+	keywords = {morphing},
+	pages = {213-233},
+	title = {On Certain Homotopy Properties of some Spaces of Linear and Piecewise Linear Homeomorphisms. {I}},
+	volume = {181},
+	year = {1973}}
+
+@article{h-dphcp-74,
+	author = {Ho, Chung-Wu},
+	date-added = {2024-11-27 07:56:55 -0600},
+	date-modified = {2024-11-27 08:40:23 -0600},
+	doi = {10.2140/pjm.1974.55.427},
+	journal = {Pacific J. Math.},
+	keywords = {morphing},
+	number = {2},
+	pages = {427--439},
+	title = {Deforming {P.L.} Homeomorphisms on a convex polygonal disk},
+	volume = {55},
+	year = {1974},
+	bdsk-url-1 = {https://doi.org/10.2140/pjm.1974.55.427}}
 
 @article{d-rdt-90,
 	author = {Dillencourt, Michael B.},
@@ -18,7 +56,8 @@
 	pages = {283--287},
 	title = {Realizability of {Delaunay} triangulations},
 	volume = {33},
-	year = {1990}}
+	year = {1990},
+	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(90)90210-O}}
 
 @article{ds-gtcid-96,
 	abstract = {We present new graph-theoretical conditions for polyhedra of inscribable type and Delaunay triangulations. We establish several sufficient conditions of the following general form: if a polyhedron has a sufficiently rich collection of Hamiltonian subgraphs, then it is of inscribable type. These results have several consequences: &#x02022;* All 4-connected polyhedra are of inscribable type.&#x02022;* All simplicial polyhedra in which all vertex degrees are between 4 and 6, inclusive, are of inscribable type.&#x02022;* All triangulations without chords or nonfacial triangles are realizable as combinatorially equivalent Delaunay triangulations. We also strengthen some earlier results about matchings in polyhedra of inscribable type. Specifically, we show that any nonbipartite polyhedron of inscribable type has a perfect matching containing any specified edge, and that any bipartite polyhedron of inscribable type has a perfect matching containing any two specified disjoint edges. We give examples showing that these results are best possible.},
@@ -3822,10 +3861,10 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	bdsk-url-1 = {https://doi.org/10.4310/AJM.2015.v19.n4.a2}}
 
 @inproceedings{chhs-prlhe-83,
-	author = {Connelly, Robert and Henderson, David W. and Ho, Chung Wu and Starbird, Michael},
+	author = {Connelly, Robert and Henderson, David W. and Ho, Chung-Wu and Starbird, Michael},
 	booktitle = {Continua, Decompositions, Manifolds: Proc. Texas Topology Symposium, 1980},
 	date-added = {2021-05-19 16:00:56 -0500},
-	date-modified = {2021-06-24 14:54:08 -0500},
+	date-modified = {2024-11-27 08:40:07 -0600},
 	keywords = {morphing},
 	pages = {229--239},
 	publisher = {Univ. Texas Press},
@@ -20576,8 +20615,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{h-dpt-76,
 	author = {Ho, Chung-Wu},
+	comments = {Corrects errors in several earlier papers},
 	date-added = {2011-09-30 07:50:47 +0000},
-	date-modified = {2012-03-27 13:17:56 +0000},
+	date-modified = {2024-11-27 08:39:45 -0600},
+	doi = {10.2307/3616244},
 	journal = {Math. Gazette},
 	number = {412},
 	pages = {132--134},
