--- a/topology.bib
+++ b/topology.bib
@@ -1,12 +1,95 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2024-11-27 08:40:43 -0600 
+%% Created for Jeff Erickson at 2024-11-28 20:00:07 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bi-hbca-22,
+	abstract = {Barycentric coordinates are a fundamental tool in computer graphics and geometry processing. A variety of ways has been proposed for constructing such coordinates on the Euclidean plane. The spherical barycentric coordinates are also developed. This paper completes this construction for the hyperbolic plane case. We define hyperbolic barycentric coordinates (HBC) that describe the position of a point in the hyperbolic plane with respect to the vertices of a given geodesic polygon. We construct explicitly three kinds of HBC, namely hyperbolic Wachspress, mean values and discrete harmonic coordinates. These coordinates have properties which resemble those of the planar ones, and they are invariant by the Lorentzian transformations. Furthermore, we figure out the HBC on the Poincar{\'e} disk model. The HBC associated to a point in a hyperbolic triangle are unique. We develop two expressions of these coordinates, taking into account the parameters of a point inside the triangle. In addition, we exploit these coordinates to define a parameterization of a surface-mesh with boundary into the Poincar{\'e} disk, and we show some examples. This hyperbolic parameterization extends that of the planar one, known as Tutte's embedding. Furthermore, we demonstrate the efficiency of these coordinates by giving other applications. Namely hyperbolic deformation and rapid shape morphing.},
+	author = {eddine Bensad, Alaa and Ikemakhen, Aziz},
+	date-added = {2024-11-28 19:59:29 -0600},
+	date-modified = {2024-11-28 20:00:05 -0600},
+	doi = {10.1016/j.cagd.2022.102086},
+	journal = {Comput. Aided Geom. Design},
+	keywords = {Hyperbolic plane, Geodesic polygon, Hyperbolic barycentric coordinates, Hyperbolic mesh parameterization, Morphing},
+	pages = {102086},
+	title = {Hyperbolic barycentric coordinates and applications},
+	volume = {95},
+	year = {2022}}
+
+@article{baib-smisc-24,
+	abstract = {In this paper, we realize a rapid, smooth iterative morphing algorithm between two immersed and closed spherical curves of arbitrary turning numbers. By compensating in turning numbers, we linearly interpolate between geodesic curvatures and the side lengths of their accurate spherical polygons approximation. Our algorithm is essentially based on a geometrical closure condition for a flow of spherical polygons involving the variation of both sides and exterior angles. A curvature smoothing flow using discrete geodesic curvature is adopted for smooth curve generation. To demonstrate the good properties of the method, a morphing of spherical curves and ruled surfaces is illustrated.},
+	author = {Bellaihou, Mohamed and Ahanchaou, Taoufik and Ikemakhen, Aziz and Bensad, Alaa Eddine},
+	date-added = {2024-11-28 19:56:40 -0600},
+	date-modified = {2024-11-28 19:57:15 -0600},
+	doi = {10.1016/j.cam.2024.115973},
+	journal = {J. Comput. Appl. Math.},
+	keywords = {Smooth morphing, Spherical curves, Turning numbers, Ruled surfaces, Curvature flow, Discrete curvature},
+	pages = {115973},
+	title = {Smooth morphing of immersed spherical curves and application to ruled surfaces},
+	volume = {449},
+	year = {2024}}
+
+@inproceedings{lbs-sbc-06,
+	abstract = {We develop spherical barycentric coordinates. Analogous to classical, planar barycentric coordinates that describe the positions of points in a plane with respect to the vertices of a given planar polygon, spherical barycentric coordinates describe the positions of points on a sphere with respect to the vertices of a given spherical polygon. In particular, we introduce spherical mean value coordinates that inherit many good properties of their planar counterparts. Furthermore, we present a construction that gives a simple and intuitive geometric interpretation for classical barycentric coordinates, like Wachspress coordinates, mean value coordinates, and discrete harmonic coordinates.One of the most interesting consequences is the possibility to construct mean value coordinates for arbitrary polygonal meshes. So far, this was only possible for triangular meshes. Furthermore, spherical barycentric coordinates can be used for all applications where only planar barycentric coordinates were available up to now. They include B\'{e}zier surfaces, parameterization, free-form deformations, and interpolation of rotations.},
+	address = {Goslar, DEU},
+	author = {Langer, Torsten and Belyaev, Alexander and Seidel, Hans-Peter},
+	booktitle = {Proc. 4th Eurographics Symp. Geom. Processing},
+	date-added = {2024-11-28 19:53:14 -0600},
+	date-modified = {2024-11-28 19:53:42 -0600},
+	isbn = {3905673363},
+	location = {Cagliari, Sardinia, Italy},
+	numpages = {8},
+	pages = {81--88},
+	publisher = {Eurographics Association},
+	series = {SGP '06},
+	title = {Spherical barycentric coordinates},
+	year = {2006}}
+
+@article{bi-gcsbc-23,
+	abstract = {We provide a general method for defining and efficiently computing barycentric coordinates with respect to polygons on the unit sphere. More precisely, we develop a novel explicit construction which allows us to compute the spherical barycentric coordinates from their 2D-Euclidean counterparts. In particular, we give two interesting families of spherical coordinates, one is defined for convex and non-convex spherical polygons. An interesting consequence is the possibility to construct new 3D barycentric coordinates for arbitrary polygonal meshes. Furthermore, we present an alternative construction for spherical barycentric coordinates with help of 3D barycentric coordinates for closed triangular meshes. This construction is extended to arbitrary dimensions. We show that our spherical and 3D coordinates are widely applicable to many domains. We give several examples related to spherical blending, space deformations and shape morphing in 3D.},
+	author = {eddine Bensad, Alaa and Ikemakhen, Aziz},
+	date-added = {2024-11-28 19:50:13 -0600},
+	date-modified = {2024-11-28 19:50:56 -0600},
+	doi = {10.1016/j.cam.2022.114945},
+	journal = {J. Comput. Appl. Math.},
+	keywords = {Geodesic polygon, Spherical barycentric coordinates, 3D barycentric coordinates, Morphing},
+	pages = {114945},
+	title = {A general construction of spherical barycentric coordinates and applications},
+	volume = {422},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1016/j.cam.2022.114945}}
+
+@inproceedings{m-uenba-46,
+	author = {M{\"o}bius, August F.},
+	booktitle = {Abh. Begr{\"u}ndung K{\"o}nigl S{\"a}chs. Gesell. Wiss. am Tage der zweihundertj{\"a}hrigen Geburtsfeier Leibnizens},
+	date-added = {2024-11-28 17:05:31 -0600},
+	date-modified = {2024-11-28 17:55:13 -0600},
+	keywords = {spherical barycentric coordinates},
+	note = {\textit{Gesammelte Werke} 2:1--54, Liepzig, 1886},
+	pages = {45--86},
+	publisher = {Jablonowski Gesellschaft},
+	title = {{{\"U}ber} eine neue Behandlungsweise der analytischen {Sph{\"a}rik}},
+	year = {1846}}
+
+@article{ans-bbpss-96,
+	abstract = {In this paper we discuss a natural way to define barycentric coordinates on general sphere-like surfaces. This leads to a theory of Bernstein-B{\'e}zier polynomials which parallels the familiar planar case. Our constructions are based on a study of homogeneous polynomials on trihedra in R3. The special case of Bernstein-B{\'e}zier polynomials on a sphere is considered in detail.},
+	author = {Alfeld, Peter and Neamtu, Marian and Schumaker, Larry L.},
+	date-added = {2024-11-28 16:49:59 -0600},
+	date-modified = {2024-11-28 16:51:25 -0600},
+	doi = {10.1016/0167-8396(95)00030-5},
+	journal = {Comput. Aided Geom. Design},
+	keywords = {spherical barycentric coordinates},
+	number = {4},
+	pages = {333--349},
+	title = {{Bernstein}-{B{\'e}zier} polynomials on spheres and sphere-like surfaces},
+	volume = {13},
+	year = {1996},
+	bdsk-url-1 = {https://doi.org/10.1016/0167-8396(95)00030-5}}
 
 @article{h-chps2-73,
 	author = {Ho, Chung-Wu},
@@ -18,7 +101,8 @@
 	pages = {235--243},
 	title = {On Certain Homotopy Properties of some Spaces of Linear and Piecewise Linear Homeomorphisms. {II}},
 	volume = {181},
-	year = {1973}}
+	year = {1973},
+	bdsk-url-1 = {https://doi.org/10.2307/1996631}}
 
 @article{h-chps1-73,
 	author = {Ho, Chung-Wu},
@@ -30,7 +114,8 @@
 	pages = {213-233},
 	title = {On Certain Homotopy Properties of some Spaces of Linear and Piecewise Linear Homeomorphisms. {I}},
 	volume = {181},
-	year = {1973}}
+	year = {1973},
+	bdsk-url-1 = {https://doi.org/10.2307/1996630}}
 
 @article{h-dphcp-74,
 	author = {Ho, Chung-Wu},
@@ -3250,9 +3335,10 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 @article{sc-lmtm-20,
 	author = {Sharp, Nicholas and Crane, Keenan},
 	date-added = {2023-02-09 12:01:37 -0600},
-	date-modified = {2023-02-09 12:01:37 -0600},
-	doi = {https://doi.org/10.1111/cgf.14069},
-	journal = {Computer Graphics Forum (SGP)},
+	date-modified = {2024-11-28 16:56:30 -0600},
+	doi = {10.1111/cgf.14069},
+	journal = {Computer Graphics Forum},
+	note = {Proc. Symp. Geom. Processing 2020},
 	number = {5},
 	title = {A {Laplacian} for Nonmanifold Triangle Meshes},
 	volume = {39},
@@ -20624,7 +20710,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	pages = {132--134},
 	title = {Decomposition of a polygon into triangles},
 	volume = {60},
-	year = {1976}}
+	year = {1976},
+	bdsk-url-1 = {https://doi.org/10.2307/3616244}}
 
 @article{h-uag-08,
 	author = {Hahn, Hans},
@@ -21672,15 +21759,16 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{lzh-hdceg-07,
 	author = {Liu, Yong-Jin and Zhou, Qian-Yi and Hu, Shi-Min},
 	date-added = {2011-05-25 12:10:46 -0500},
-	date-modified = {2012-05-06 20:24:26 +0000},
-	journal = {The Visual Computer},
+	date-modified = {2024-11-28 16:52:49 -0600},
+	doi = {10.1007/s00371-007-0136-5},
+	journal = {Vis. Comput.},
 	number = {9},
 	pages = {661--668},
 	read = {1},
 	title = {Handling degenerate cases in exact geodesic computation on triangle meshes},
 	volume = {23},
 	year = {2007},
-	bdsk-url-1 = {http://dx.doi.org/10.1007/s00371-007-0136-5}}
+	bdsk-url-1 = {https://doi.org/10.1007/s00371-007-0136-5}}
 
 @article{bk-spcmr-05,
 	author = {Bischoff, Stephan and Kobbelt, Leif},
