more shelling refs

--- a/topology.bib
+++ b/topology.bib
@@ -1,12 +1,244 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jeff Erickson at 2024-11-28 20:00:07 -0600 
+%% Created for Jeff Erickson at 2024-12-02 22:05:29 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{DBLP:conf/wea/AleardiDF18,
+	author = {Castelli Aleardi, Luca and Denis, Gaspard and Fusy, {\'E}ric},
+	booktitle = {Proc. 17th Int. Symp Experimental Algorithms},
+	date-added = {2024-12-02 22:00:17 -0600},
+	date-modified = {2024-12-02 22:01:54 -0600},
+	doi = {10.4230/LIPICS.SEA.2018.24},
+	editor = {D'Angelo, Gianlorenzo},
+	pages = {24:1--24:14},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+	series = {Leibniz Int. Proc. Informatics},
+	title = {Fast Spherical Drawing of Triangulations: An Experimental Study of Graph Drawing Tools},
+	volume = {103},
+	year = {2018}}
+
+@article{o-cgc51-08,
+	abstract = {Can a simple spherical polygon always be triangulated? The answer depends on the definitions of "polygon" and "triangulate".Define a spherical polygon to be a simple, closed curve on a sphere S composed of a finite number of great circle arcs (also known as geodesic arcs) meeting at vertices. Can every spherical polygon be triangulated? Figure 1 shows an example of what is intended.1 The planar analog is well-known and a cornerstone of computational geometry: the interior of every planar simple polygon can be triangulated (and efficiently so). The situation for spherical polygons is not so straightforward. There are three complications.},
+	author = {O'Rourke, Joseph},
+	date-added = {2024-12-02 13:50:10 -0600},
+	date-modified = {2024-12-02 13:50:43 -0600},
+	doi = {10.1145/1412700.1412714},
+	journal = {SIGACT News},
+	month = {September},
+	number = {3},
+	pages = {58--62},
+	title = {Computational geometry column 51},
+	volume = {39},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1145/1412700.1412714}}
+
+@inproceedings{ekp-ifmpg-03,
+	author = {Erten, Cesim and Kobourov, Stephen G. and Pitta, Chandan},
+	booktitle = {Proc. 11th Symp. Graph Drawing},
+	date-added = {2024-12-01 10:53:36 -0600},
+	date-modified = {2024-12-01 10:54:16 -0600},
+	doi = {10.1007/978-3-540-24595-7_30},
+	editor = {Liotta, Giuseppe},
+	pages = {320--331},
+	publisher = {Springer},
+	series = {Lecture Notes Comput. Sci.},
+	title = {Intersection-Free Morphing of Planar Graphs},
+	volume = {2912},
+	year = {2003},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-540-24595-7_30}}
+
+@inproceedings{fsh-eiaga-08,
+	author = {Fogel, Efi and Setter, Ophir and Halperin, Dan},
+	booktitle = {Proc. 24th Europ. Workshop Comput. Geom.},
+	date-added = {2024-11-30 22:51:11 -0600},
+	date-modified = {2024-11-30 22:53:29 -0600},
+	pages = {83--86},
+	title = {Exact Implementation of Arrangements of Geodesic Arcs on the Sphere with Applications},
+	url = {https://www.cgl.cs.tau.ac.il/wp-content/uploads/2023/09/sphere-vor.pdf},
+	year = {2008},
+	bdsk-url-1 = {https://www.cgl.cs.tau.ac.il/wp-content/uploads/2023/09/sphere-vor.pdf}}
+
+@inproceedings{fsh-agas-08,
+	author = {Fogel, Efi and Setter, Ophir and Halperin, Dan},
+	booktitle = {Proc. 24th Ann. Symp. Comput. Geom.},
+	date-added = {2024-11-30 22:49:42 -0600},
+	date-modified = {2024-11-30 22:53:39 -0600},
+	doi = {10.1145/1377676.1377711},
+	pages = {218--219},
+	title = {Arrangements of Geodesic Arcs on the Sphere},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1145/1377676.1377711}}
+
+@article{eos-calha-86,
+	abstract = { A finite set of lines partitions the Euclidean plane into a cell complex. Similarly, a finite set of \$(d - 1)\$-dimensional hyperplanes partitions d-dimensional Euclidean space. An algorithm is presented that constructs a representation for the cell complex defined by n hyperplanes in optimal \$O(n^d )\$ time in d dimensions. It relies on a combinatorial result that is of interest in its own right. The algorithm is shown to lead to new methods for computing \$\lambda \$-matrices, constructing all higher-order Voronoi diagrams, halfspatial range estimation, degeneracy testing, and finding minimum measure simplices. In all five applications, the new algorithms are asymptotically faster than previous results, and in several cases are the only known methods that generalize to arbitrary dimensions. The algorithm also implies an upper bound of \$2^{cn^d } \$, c a positive constant, for the number of combinatorially distinct arrangements of n hyperplanes in \$E^d \$. },
+	author = {Edelsbrunner, Herbert and O'Rourke, Joseph and Seidel, Raimund},
+	date-added = {2024-11-30 21:05:50 -0600},
+	date-modified = {2024-12-01 14:28:06 -0600},
+	doi = {10.1137/0215024},
+	journal = {SIAM Journal on Computing},
+	number = {2},
+	pages = {341-363},
+	title = {Constructing Arrangements of Lines and Hyperplanes with Applications},
+	volume = {15},
+	year = {1986},
+	bdsk-url-1 = {https://doi.org/10.1137/0215024}}
+
+@article{eg-tsa-89,
+	author = {Edelsbrunner, Herbert and Guibas, Leonidas J.},
+	date-added = {2024-11-30 21:03:41 -0600},
+	date-modified = {2024-11-30 21:03:59 -0600},
+	doi = {10.1016/0022-0000(89)90038-X},
+	journal = {J. Comput. Syst. Sci.},
+	number = {1},
+	pages = {165--194},
+	title = {Topologically Sweeping an Arrangement},
+	volume = {38},
+	year = {1989},
+	bdsk-url-1 = {https://doi.org/10.1016/0022-0000(89)90038-X}}
+
+@article{cgl-pgd-85,
+	abstract = {This paper uses a new formulation of the notion of duality that allows the unified treatment of a number of geometric problems. In particular, we are able to apply our approach to solve two long-standing problems of computational geometry: one is to obtain a quadratic algorithm for computing the minimum-area triangle with vertices chosen amongn points in the plane; the other is to produce an optimal algorithm for the half-plane range query problem. This problem is to preprocessn points in the plane, so that given a test half-plane, one can efficiently determine all points lying in the half-plane. We describe an optimalO(k + logn) time algorithm for answering such queries, wherek is the number of points to be reported. The algorithm requiresO(n) space andO(n logn) preprocessing time. Both of these results represent significant improvements over the best methods previously known. In addition, we give a number of new combinatorial results related to the computation of line arrangements.},
+	author = {Chazelle, Bernard and Guibas, Leo J. and Lee, D. T.},
+	date-added = {2024-11-30 21:01:21 -0600},
+	date-modified = {2024-11-30 21:02:22 -0600},
+	doi = {10.1007/BF01934990},
+	journal = {BIT Numer. Math.},
+	number = {1},
+	pages = {76--90},
+	title = {The power of geometric duality},
+	volume = {25},
+	year = {1985},
+	bdsk-url-1 = {https://doi.org/10.1007/BF01934990}}
+
+@book{cite-key,
+	date-added = {2024-11-30 20:58:43 -0600},
+	date-modified = {2024-11-30 20:58:47 -0600}}
+
+@article{cl-cacsa-09,
+	abstract = {Balls and spheres are the simplest modeling primitives after affine ones, which accounts for their ubiquitousness in Computer Science and Applied Mathematics. Amongst the many applications, we may cite their prevalence when it comes to modeling our ambient 3D space, or to handle molecular shapes using Van der Waals models. If most of the applications developed so far are based upon simple geometric tests between balls, in particular the intersection test, a number of applications would obviously benefit from finer pieces of information. Consider a sphere S0 and a list of circles on it, each such circle stemming from the intersection between S0 and another sphere, say Si. Also assume that Si has an accompanying ball Bi. This paper develops an integrated framework, based on the generalization of the Bentley--Ottmann algorithm to the spherical setting, to (i) compute the exact arrangement of circles on S0 (ii) construct in a single pass the half-edge data structure encoding the arrangement induced by the circles (iii) report the covering list of each face of this arrangement, i.e. the list of balls containing it. As an illustration, the covering lists are used as the building block of a geometric optimization algorithm aiming at selecting diverse conformational ensembles for flexible protein--protein docking.},
+	author = {Cazals, Fr{\'e}d{\'e}ric and Loriot, S{\'e}bastien},
+	date-added = {2024-11-30 20:54:26 -0600},
+	date-modified = {2024-11-30 20:54:55 -0600},
+	doi = {10.1016/j.comgeo.2008.10.004},
+	journal = {Comput. Geom. Theory Appl.},
+	keywords = {Spheres, Arrangement of circles, Van der Waals models, Docking},
+	number = {6},
+	pages = {551--565},
+	title = {Computing the arrangement of circles on a sphere, with applications in structural biology},
+	volume = {42},
+	year = {2009},
+	bdsk-url-1 = {https://doi.org/10.1016/j.comgeo.2008.10.004}}
+
+@inproceedings{cl-ceacs-07,
+	abstract = {The Bentley-Ottmann (BO) algorithm, initially designed to report theintersection points of line-segments in the plane, is the prototypicalsweep-line algorithm. This video presents an extension of the BOalgorithm to the spherical setting, so as to compute the exactarrangement of a collection of circles on a sphere.An application in bio-chemistry, geared towards the investigation ofatomic environments and multi-body interactions in macro-molecules, isalso presented.The reader is referred toRef. [1] for the companion paper of this video.},
+	author = {Cazals, Fr{\'e}d{\'e}ric and Loriot, S{\'e}bastien},
+	booktitle = {Proc. 23rd Ann. Symp. Comput. Geom.},
+	date-added = {2024-11-30 20:50:38 -0600},
+	date-modified = {2024-11-30 20:55:14 -0600},
+	doi = {10.1145/1247069.1247088},
+	keywords = {structural biology, robust geometric software, molecular surfaces, arrangements, Van der Waals models},
+	pages = {119--120},
+	title = {Computing the exact arrangement of circles on a sphere, with applications in structural biology: video},
+	year = {2007},
+	bdsk-url-1 = {https://doi.org/10.1145/1247069.1247088}}
+
+@article{spr-mpma-07,
+	author = {Sheffer, Alla and Praun, Emil and Rose, Kenneth},
+	date-added = {2024-11-30 15:35:18 -0600},
+	date-modified = {2024-11-30 15:38:45 -0600},
+	doi = {10.1561/0600000011},
+	journal = {Found. Trends Comput. Graph. Vis.},
+	number = {2},
+	pages = {105--171},
+	title = {Mesh Parameterization Methods and Their Applications},
+	volume = {2},
+	year = {2007},
+	bdsk-url-1 = {http://dx.doi.org/10.1561/0600000011}}
+
+@inproceedings{hls-mptp-07,
+	abstract = {Mesh parameterization is a powerful geometry processing tool with numerous computer graphics applications, from texture mapping to animation transfer. This course outlines its mathematical foundations, describes recent methods for parameterizing meshes over various domains, discusses emerging tools like global parameterization and inter-surface mapping, and demonstrates a variety of parameterization applications.},
+	author = {Hormann, Kai and L\'{e}vy, Bruno and Sheffer, Alla},
+	booktitle = {ACM SIGGRAPH 2007 Courses},
+	date-added = {2024-11-30 15:25:17 -0600},
+	date-modified = {2024-11-30 15:32:10 -0600},
+	doi = {10.1145/1281500.1281510},
+	title = {Mesh parameterization: {T}heory and practice},
+	year = {2007},
+	bdsk-url-1 = {https://doi.org/10.1145/1281500.1281510}}
+
+@article{lwz-dsdts-23,
+	arxiv = {2202.06402},
+	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
+	date-added = {2024-11-30 14:24:23 -0600},
+	date-modified = {2024-11-30 14:28:02 -0600},
+	doi = {10.2140/pjm.2023.323.11},
+	journal = {Pacific J. Math.},
+	number = {1},
+	pages = {115--127},
+	title = {The deformation space of {Delaunay} triangulations of the sphere},
+	volume = {323},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.2140/pjm.2023.323.11}}
+
+@inproceedings{bg-stcc3-69,
+	address = {Berlin, Heidelberg},
+	author = {Barnette, David W. and Gr{\"u}nbaum, Branko},
+	booktitle = {The Many Facets of Graph Theory},
+	date-added = {2024-11-29 19:54:08 -0600},
+	date-modified = {2024-11-29 20:02:25 -0600},
+	editor = {Chartrand, Gary and Kapoor, Shashichand Fatehchand},
+	pages = {27--40},
+	publisher = {Springer},
+	title = {On {Steinitz's} theorem concerning convex 3-polytopes and on some properties of planar graphs},
+	year = {1969}}
+
+@inproceedings{k-stcm-65,
+	abstract = {The set of compatibleC^{\infty }-differential structures or smoothings on a triangulated or combinatorial manifoldXcan be divided into equivalence classes according to several equivalence relations. The weakest and most important of these relations isdiffeomorphy. Two smoothingsD0andD1are diffeomorphic if the correspondingC^{\infty }-manifolds are diffeomorphic. The strongest equivalence, after equality, ishomotopy. Under our definition, homotopy is equivalent to the existence of an intervalIof piecewiseC^{\infty }-Imbeddings ofXwith fixed triangulation onto someC^{\infty }-manifoldY, such that the initial and final imbedding carry (dually) the smoothing ofYontoD0},
+	author = {Kuiper, Nicolass H.},
+	booktitle = {Differential and Combinatorial Topology: A Symposium in Honor of Marston Morse},
+	date-added = {2024-11-29 19:14:59 -0600},
+	date-modified = {2024-11-29 19:16:08 -0600},
+	keywords = {morphing},
+	pages = {3--22},
+	publisher = {Princeton University Press},
+	title = {On the Smoothings of Triangulated and Combinatorial Manifolds},
+	url = {http://www.jstor.org/stable/j.ctt183pp26.4},
+	year = {1965},
+	bdsk-url-1 = {http://www.jstor.org/stable/j.ctt183pp26.4}}
+
+@incollection{gs-gpg-81,
+	author = {Grunbaum, Branko and Shephard, Geoffrey C.},
+	booktitle = {Combinatorics: Proc. 8th British Combinatorial Conf.},
+	date-added = {2024-11-29 16:31:30 -0600},
+	date-modified = {2024-11-29 16:35:56 -0600},
+	doi = {10.1017/CBO9780511662157.008},
+	editor = {Temperley, Neville},
+	number = {52},
+	pages = {124--150},
+	publisher = {Cambridge Univ. Press},
+	series = {London Math, Soc. Lecture Note Series},
+	title = {The geometry of planar graphs},
+	year = {1981},
+	bdsk-url-1 = {https://doi.org/10.1017/CBO9780511662157.008}}
+
+@article{el-ptmme-23,
+	arxiv = {2106.14086},
+	author = {Erickson, Jeff and Lin, Patrick},
+	date-added = {2024-11-29 15:44:00 -0600},
+	date-modified = {2024-11-29 15:44:51 -0600},
+	doi = {10.7155/jgaa.00616},
+	journal = {Journal of Graph Algorithms and Applications},
+	number = {2},
+	pages = {95--118},
+	title = {Planar and Toroidal Morphs Made Easier},
+	volume = {27},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.7155/jgaa.00616}}
 
 @article{bi-hbca-22,
 	abstract = {Barycentric coordinates are a fundamental tool in computer graphics and geometry processing. A variety of ways has been proposed for constructing such coordinates on the Euclidean plane. The spherical barycentric coordinates are also developed. This paper completes this construction for the hyperbolic plane case. We define hyperbolic barycentric coordinates (HBC) that describe the position of a point in the hyperbolic plane with respect to the vertices of a given geodesic polygon. We construct explicitly three kinds of HBC, namely hyperbolic Wachspress, mean values and discrete harmonic coordinates. These coordinates have properties which resemble those of the planar ones, and they are invariant by the Lorentzian transformations. Furthermore, we figure out the HBC on the Poincar{\'e} disk model. The HBC associated to a point in a hyperbolic triangle are unique. We develop two expressions of these coordinates, taking into account the parameters of a point inside the triangle. In addition, we exploit these coordinates to define a parameterization of a surface-mesh with boundary into the Poincar{\'e} disk, and we show some examples. This hyperbolic parameterization extends that of the planar one, known as Tutte's embedding. Furthermore, we demonstrate the efficiency of these coordinates by giving other applications. Namely hyperbolic deformation and rapid shape morphing.},
@@ -19,7 +251,8 @@
 	pages = {102086},
 	title = {Hyperbolic barycentric coordinates and applications},
 	volume = {95},
-	year = {2022}}
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.1016/j.cagd.2022.102086}}
 
 @article{baib-smisc-24,
 	abstract = {In this paper, we realize a rapid, smooth iterative morphing algorithm between two immersed and closed spherical curves of arbitrary turning numbers. By compensating in turning numbers, we linearly interpolate between geodesic curvatures and the side lengths of their accurate spherical polygons approximation. Our algorithm is essentially based on a geometrical closure condition for a flow of spherical polygons involving the variation of both sides and exterior angles. A curvature smoothing flow using discrete geodesic curvature is adopted for smooth curve generation. To demonstrate the good properties of the method, a morphing of spherical curves and ruled surfaces is illustrated.},
@@ -32,7 +265,8 @@
 	pages = {115973},
 	title = {Smooth morphing of immersed spherical curves and application to ruled surfaces},
 	volume = {449},
-	year = {2024}}
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1016/j.cam.2024.115973}}
 
 @inproceedings{lbs-sbc-06,
 	abstract = {We develop spherical barycentric coordinates. Analogous to classical, planar barycentric coordinates that describe the positions of points in a plane with respect to the vertices of a given planar polygon, spherical barycentric coordinates describe the positions of points on a sphere with respect to the vertices of a given spherical polygon. In particular, we introduce spherical mean value coordinates that inherit many good properties of their planar counterparts. Furthermore, we present a construction that gives a simple and intuitive geometric interpretation for classical barycentric coordinates, like Wachspress coordinates, mean value coordinates, and discrete harmonic coordinates.One of the most interesting consequences is the possibility to construct mean value coordinates for arbitrary polygonal meshes. So far, this was only possible for triangular meshes. Furthermore, spherical barycentric coordinates can be used for all applications where only planar barycentric coordinates were available up to now. They include B\'{e}zier surfaces, parameterization, free-form deformations, and interpolation of rotations.},
@@ -185,8 +419,8 @@
 @article{a-mpsws-00,
 	author = {Alexa, Marc},
 	date-added = {2024-11-21 17:23:40 -0600},
-	date-modified = {2024-11-21 17:27:24 -0600},
-	doi = {https://doi.org/10.1007/PL00007211},
+	date-modified = {2024-11-30 15:16:07 -0600},
+	doi = {10.1007/PL00007211},
 	journal = {Vis. Comput.},
 	number = {1},
 	pages = {26--37},
@@ -3170,17 +3404,17 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	year = {2021},
 	bdsk-url-1 = {https://doi.org/10.4310/jdg/1635368350}}
 
-@misc{lwz-dsgtg-21,
+@article{lwz-dsgtg-23,
 	arxiv = {2105.00612},
 	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
 	date-added = {2023-02-09 12:04:16 -0600},
-	date-modified = {2023-02-09 12:07:09 -0600},
-	doi = {10.48550/ARXIV.2105.00612},
-	howpublished = {Preprint},
-	month = {May},
-	note = {to appear in \emph{Geom. Topol.}},
+	date-modified = {2024-11-29 15:48:03 -0600},
+	doi = {10.2140/gt.2023.27.3361},
+	journal = {Geom. Topol.},
+	pages = {3361--3385},
 	title = {The Deformation Space of Geodesic Triangulations and Generalized {Tutte's} Embedding Theorem},
-	year = {2021},
+	volume = {7},
+	year = {2023},
 	bdsk-url-1 = {https://doi.org/10.48550/ARXIV.2105.00612}}
 
 @misc{bclmmsss-hdu-21,
@@ -3893,10 +4127,10 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	year = {2003},
 	bdsk-url-1 = {https://doi.org/10.1016/S0167-8396(03)00002-5}}
 
-@article{al-sote-17,
-	author = {Aigerman, Noam and Lipman, Yaron},
+@article{akl-sote-17,
+	author = {Aigerman, Noam and Kovalsky, Shahar Z. and Lipman, Yaron},
 	date-added = {2021-05-31 15:09:28 -0500},
-	date-modified = {2021-05-31 15:11:01 -0500},
+	date-modified = {2024-11-30 15:19:44 -0600},
 	doi = {10.1145/3072959.3073615},
 	journal = {ACM Trans. Graphics},
 	number = {4},
@@ -12593,7 +12827,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	author = {Steinitz, Ernst and Rademacher, Hans},
 	comments = {"von Ernst Steinitz, aus dem Nachlass herausgegeben und erg{\"a}nzt von Hans Rademacher"},
 	date-added = {2015-07-08 17:38:49 +0000},
-	date-modified = {2023-03-09 17:28:01 -0600},
+	date-modified = {2024-11-29 17:49:01 -0600},
 	doi = {10.1007/978-3-642-65609-5},
 	note = {Reprinted 1976},
 	number = {41},
@@ -12601,6 +12835,7 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	read = {1},
 	series = {Grundlehren der mathematischen Wissenschaften},
 	title = {Vorlesungen {\"u}ber die Theorie der Polyeder: unter Einschlu{\ss} der Elemente der Topologie},
+	url = {http://eudml.org/doc/204064},
 	year = {1934},
 	bdsk-url-1 = {https://doi.org/10.1007/978-3-642-65609-5}}
 
@@ -23455,9 +23690,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	year = {1994}}
 
 @article{eks-sspp-83,
-	author = {Edelsbrunner, Herbert and Kirkpatrick, David G. and Seidel, Raimnud},
+	author = {Edelsbrunner, Herbert and Kirkpatrick, David G. and Seidel, Raimund},
 	date-added = {2009-11-22 14:45:02 -0600},
-	date-modified = {2012-05-06 20:28:16 +0000},
+	date-modified = {2024-11-30 21:06:49 -0600},
+	doi = {10.1109/TIT.1983.1056714},
 	journal = {IEEE Trans. Inform. Theory},
 	keywords = {alpha shape},
 	number = {4},
@@ -23465,7 +23701,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	read = {1},
 	title = {On the shape of a set of points in the plane},
 	volume = {IT-29},
-	year = {1983}}
+	year = {1983},
+	bdsk-url-1 = {https://doi.org/10.1109/TIT.1983.1056714}}
 
 @article{d-sv-34,
 	author = {Delaunay, Boris N.},
